Changed package names and expanded some classes to multiple classes as per recommendation of the course teacher. Added observer pattern.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cse.cu.srpsystem.gui.MainActivity">
+    tools:context="cse.cu.srpsystem.presentationlayer.MainActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
