--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cse.cu.srpsystem.gui.DashboardCommon">
+    tools:context="cse.cu.srpsystem.presentationlayer.LoginDashboardPL">
 
 </android.support.constraint.ConstraintLayout>
