--- a/app/src/main/res/layout/activity_result_view.xml
+++ b/app/src/main/res/layout/activity_result_view.xml
@@ -22,6 +22,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/cgpa"
-        tools:context="cse.cu.srpsystem.gui.ResultViewActivity" />
+        tools:context="cse.cu.srpsystem.presentationlayer.ViewResultPL" />
 
 </android.support.constraint.ConstraintLayout>
